# Rolko-Bitcoin-Ordinals

./: .gitignore
backend/rolko/: Cargo.toml
backend/rolko/src/: bitcoin_helper.rs  btcpay.rs  common.rs  config_dev.toml  main.rs  rolko_bitcoin.rs
frontend/: next.config.js  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: 1.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  index.pack  index.pack.old
frontend/.next/cache/webpack/server-development/: 0.pack  1.pack  2.pack  3.pack  4.pack  5.pack  index.pack  index.pack.old
frontend/.next/server/: _error.js
frontend/.next/server/pages/: _app.js  _document.js  _error.js  index.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/.next/static/chunks/pages/: _app.js  index.js
frontend/.next/static/webpack/: 1d6c9ca82f272379.webpack.hot-update.json  webpack.1d6c9ca82f272379.hot-update.js  webpack.2b4e6eeb71203889.hot-update.js  webpack.cc89cbb0f0e4e016.hot-update.js
frontend/.next/static/webpack/pages/: index.1d6c9ca82f272379.hot-update.js
frontend/components/: DropZone.js  Layout.js  TextBox.js
frontend/pages/: index.js
frontend/posts/: another-post-in-the-wall.mdx
frontend/styles/: DropZone.module.css  FilePreview.module.css  Home.module.css  globals.css
frontend/utils/: global-data.js
