[package]
name = "rolko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix-multipart = "0.5.0"
actix-rt = "2"
futures-util = "0.3.26"
futures = "0.3"
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }

bitcoin = "0.29.2"
bitcoincore-rpc = "0.16.0"

lightning-invoice = "0.21.0"
lightning = "0.0.113"
secp256k1 = "0.24.0"
bitcoin_hashes = "0.11"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"